--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@ header figure{
 
 .inscription{
     color: #0065FC;
-    order: 1;
 }
 
 /*******************TRAITEMENT DES FILTRES ET LOGOS************************/
@@ -234,7 +233,6 @@ h2{
     width: 190px;
     background: white;
     padding: 10px;
-    padding-right: 10px;
     margin-left: -5px;
 }
 
@@ -342,21 +340,18 @@ h3, p{
     padding-bottom: 5px;
 }
 
-.marseille{
+.marseille, .marseille1{
     border-radius: 20px;
     width: 250px;
     height: 375px;
 }
 
 .marseille1{
-    border-radius: 20px;
-    width: 250px;
-    height: 375px;
     box-shadow: 0 0 20px #0000002e;
     padding-bottom: 32px;
 }
 
-.marseille img{
+.marseille, .marseille1 img{
     width: 100%;
     object-fit: cover;
     height: 100%;
@@ -364,8 +359,6 @@ h3, p{
 }
 
 .marseille1 img{
-    width: 100%;
-    object-fit: cover;
     height: 98%;
     border-radius: 20px 20px 0px 0px;
 }
@@ -374,22 +367,11 @@ h3, p{
     padding-top: 3px;
 }
 
-.marseille figcaption{
+.marseille, .marseille1 figcaption{
     font: -webkit-control;
 }
 
-.marseille1 figcaption{
-    font: -webkit-control;
-}
-
-.marseille figure img{
-    border-radius: 20px 20px 0px 0px;
-    width: 250px;
-    height: 156px;
-    object-fit: cover;
-}
-
-.marseille1 figure img{
+.marseille, .marseille1 figure img{
     border-radius: 20px 20px 0px 0px;
     width: 250px;
     height: 156px;
@@ -416,11 +398,11 @@ footer{
     margin-left: 15px;
 }
 
-.fin h3{
+.fin, .fin1 h3{
     padding-bottom: 15px;
 }
 
-.fin p{
+.fin, .fin1 p{
     padding-bottom: 10px;
 }
 
@@ -438,12 +420,41 @@ footer{
 
 @media screen and (max-width: 768px)
 {
+
+    nav{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
     .navbar figure{
         margin: 0%;
-}
+    }
+
+    header nav ul{
+        order: 2;
+    }
+
+    .inscription{
+        order: 1;
+    }
 
     .hebergement{
         flex-direction: column-reverse;
+    }
+
+    .hebergements figure{
+        width: 100%;
+        height: auto;
+    }
+
+    .hebergements figure img{
+        width: 100%;
+        height: 230px;
+    }
+
+    .hebergements figcaption{
+        width: 189%;
+        padding: 10px 15px 10px 30px;
     }
 
     #hebergements_marseille{
