--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,7 +7,7 @@
 
 /*******************CORPS DE PAGE************************/
 
-.navbar, .filtres, #fonction_filtres, .paragraphe{
+.navbar, .filtres, #fonction_filtres, .paragraphe, nav, header, ul{
     display: flex;
 }
 
@@ -22,17 +22,22 @@
 
 /*******************TRAITEMENT DE LA NAV************************/
 
-.navbar{
+nav{
     align-items: center;
   }
   
-.navbar a{
-    padding: 2.9% 1.8%;
+header nav a{
+    padding: 1rem 1.8%;
     text-decoration: none;
     margin-left: 50px;
 }
 
-.navbar figure{
+header nav ul a:hover{
+    border-top: solid #0065FC 3px;
+    padding: 1rem;
+}
+
+header figure{
     margin-right: 60%;
 }
 
@@ -188,7 +193,6 @@
 #hebergements_marseille{
     background: #F2F2F2;
     border-radius: 30px;
-    width: 65%;
     padding: 5px;
     display: flex;
     flex-direction: column;
@@ -229,7 +233,6 @@ h2{
     width: 190px;
     background: white;
     padding: 10px;
-    padding-right: 10px;
     margin-left: -5px;
 }
 
@@ -261,7 +264,7 @@ h3, p{
     border-radius: 30px;
     margin-left: 30px;
     padding: 15px;
-    width: 35%;
+    margin-right: 0px;
 }
 
 .droite h3{
@@ -332,50 +335,43 @@ h3, p{
     margin-left: 10px;
 }
 
-.marseille{
+#activites figcaption{
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.marseille, .marseille1{
     border-radius: 20px;
     width: 250px;
     height: 375px;
 }
 
 .marseille1{
-    border-radius: 20px;
-    width: 250px;
-    height: 375px;
     box-shadow: 0 0 20px #0000002e;
-    padding-bottom: 12px;
+    padding-bottom: 32px;
 }
 
-.marseille img{
+.marseille, .marseille1 img{
     width: 100%;
     object-fit: cover;
-    height: 96%;
+    height: 100%;
     border-radius: 20px 20px 0px 0px;
 }
 
 .marseille1 img{
-    width: 100%;
-    object-fit: cover;
-    height: 96%;
+    height: 98%;
     border-radius: 20px 20px 0px 0px;
 }
 
-.marseille figcaption{
+.marseille1 h3{
+    padding-top: 3px;
+}
+
+.marseille, .marseille1 figcaption{
     font: -webkit-control;
 }
 
-.marseille1 figcaption{
-    font: -webkit-control;
-}
-
-.marseille figure img{
-    border-radius: 20px 20px 0px 0px;
-    width: 250px;
-    height: 156px;
-    object-fit: cover;
-}
-
-.marseille1 figure img{
+.marseille, .marseille1 figure img{
     border-radius: 20px 20px 0px 0px;
     width: 250px;
     height: 156px;
@@ -394,15 +390,88 @@ h3, p{
 footer{
     background: #F2F2F2;
     display: flex;
-    justify-content: space-between;
     padding-top: 30px;
     padding-bottom: 30px;
 }
 
-footer h3{
-    margin: 10px;
+.fin{
+    margin-left: 15px;
 }
 
-footer p{
-    margin: 10px;
+.fin, .fin1 h3{
+    padding-bottom: 15px;
+}
+
+.fin, .fin1 p{
+    padding-bottom: 10px;
+}
+
+.fin1{
+    padding-left: 15%;
+}
+
+.fin1 h3{
+    padding-bottom: 15px;
+}
+
+.fin1 p{
+    padding-bottom: 10px;
+}
+
+@media screen and (max-width: 768px)
+{
+
+    nav{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .navbar figure{
+        margin: 0%;
+    }
+
+    header nav ul{
+        order: 2;
+    }
+
+    .inscription{
+        order: 1;
+    }
+
+    .hebergement{
+        flex-direction: column-reverse;
+    }
+
+    .hebergements figure{
+        width: 100%;
+        height: auto;
+    }
+
+    .hebergements figure img{
+        width: 100%;
+        height: 230px;
+    }
+
+    .hebergements figcaption{
+        width: 189%;
+        padding: 10px 15px 10px 30px;
+    }
+
+    #hebergements_marseille{
+        margin-top: 30px;
+        margin-left: 30px;
+    }
+
+    #populaires{
+        margin-left: 30px;
+    }
+
+    .droite figure{
+        width: auto;
+    }
+
+    #activites article{
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
