--- a/CSS/style.css
+++ b/CSS/style.css
@@ -553,6 +553,7 @@ footer{
     padding-bottom: 10px;
     border-top: transparent;
     font-size: 2em;
+    margin: auto;
     }
 
     .hebergements2 a:hover{
@@ -579,6 +580,7 @@ footer{
     .hebergements figcaption{
         padding: 10px 15px 10px 40px;
         margin-top: -15px;
+        display: contents;
     }
 
     #hebergements_marseille{
@@ -607,6 +609,7 @@ footer{
 
     .afficher{
         margin-bottom: 20px;
+        font-size: 2.5em;
     }
 
     #activites article{
