--- a/CSS/style.css
+++ b/CSS/style.css
@@ -554,6 +554,7 @@ footer{
     border-top: transparent;
     font-size: 2em;
     margin: auto;
+	margin-right: 70px;
     }
 
     .hebergements2 a:hover{
@@ -570,18 +571,23 @@ footer{
     .hebergements figure{
         width: 88%;
         height: 100%;
-        margin-bottom: 15%;
+        margin-bottom: 5%;
     }
 
     .hebergements figure img{
         width: 100%;
+		height: 185px;
     }
 
     .hebergements figcaption{
-        padding: 10px 15px 10px 40px;
         margin-top: -15px;
         display: contents;
     }
+	
+	.hebergements h3, .hebergements p, .etoiles, .etoiles2{
+		margin: 10px;
+		font-size: 2em;
+	}
 
     #hebergements_marseille{
         margin-top: 30px;
@@ -613,18 +619,27 @@ footer{
     }
 
     #activites article{
-        display: flex;
         flex-wrap: wrap;
     }
-
+	
+	#activites article .marseille1 figcaption, #activites article .marseille .imagesmarseille1{
+		padding-top: 10px;
+		padding-bottom: 25px;
+		height: 200px;
+	}
+	
     .marseille, .marseille1{
         width: 95%;
-        height: 10%;
+        height: 265px;
     }
 
     .marseille figure img{
         width: 100%;
     }
+	
+	.marseille1 img{
+		height: 90%;
+		}
 
     .marseille1 figure img{
         width: 100%;
