--- a/CSS/style.css
+++ b/CSS/style.css
@@ -649,6 +649,7 @@ footer{
         flex-direction: column;
         padding: 1rem;
         margin-left: 20px;
+		margin-top: 230px;
     }
 
     .fin1{
