--- a/CSS/style.css
+++ b/CSS/style.css
@@ -341,6 +341,7 @@ h3, p{
 #activites article{
     display: flex;
     justify-content: space-between;
+	flex-wrap: wrap;
     width: 100%;
 }
 
@@ -358,58 +359,36 @@ h3, p{
     padding-bottom: 5px;
 }
 
-.marseille, .marseille1{
+.marseille1{
     border-radius: 20px;
     width: 250px;
     height: 375px;
+	margin : 0 0 20px 20px;
 }
 
-.marseille1{
+article figure{
     box-shadow: 0 0 20px #0000002e;
     padding-bottom: 32px;
-}
-
-.marseille img{
-    width: 100%;
-    object-fit: cover;
-    height: 100%;
-    border-radius: 20px 20px 0px 0px;
-}
-
-.marseille1 img{
-    width: 100%;
-    object-fit: cover;
-    height: 98%;
-    border-radius: 20px 20px 0px 0px;
 }
 
 .marseille1 h3{
     padding-top: 3px;
 }
 
-.marseille figcaption{
-    font: -webkit-control;
-}
-
 .marseille1 figcaption{
     font: -webkit-control;
 }
 
-.marseille figure img{
+.marseille1 figure img, .marseille1 img{
     border-radius: 20px 20px 0px 0px;
     width: 250px;
     height: 156px;
     object-fit: cover;
 }
-
-.marseille1 figure img{
-    border-radius: 20px 20px 0px 0px;
-    width: 250px;
-    height: 156px;
-    object-fit: cover;
+.marseille1 img{
+    height: 98%;
 }
-
-.imagesmarseille1, .imagesmarseille2{
+.imagesmarseille1 {
     margin-bottom: 21px;
     box-shadow: 0 0 20px #0000002e;
     border-radius: 20px;
@@ -625,23 +604,23 @@ footer{
         font-size: 2.5em;
     }
 
-    #activites article{
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    .marseille, .marseille1{
-        width: 95%;
-        height: 10%;
-    }
-
-    .marseille figure img{
-        width: 100%;
-    }
-
-    .marseille1 figure img{
-        width: 100%;
-    }
+    #container {
+		min-width:0;
+	}
+	
+	.marseille1 {
+		margin: 20px;
+		width:100%;
+		height:156px;
+	}
+	
+	.marseille1 figure img, .marseille1 img{
+    width: 100%;
+	}
+	
+	.marseille2 {
+		margin-top:280px;
+	}
 
     footer{
         flex-direction: column;
