--- a/CSS/style.css
+++ b/CSS/style.css
@@ -430,6 +430,9 @@ footer{
 
 @media screen and (max-width: 768px)
 {
+	#container {
+		min-width:660px;
+	}
 
     nav{
         display: flex;
@@ -603,10 +606,6 @@ footer{
         margin-bottom: 20px;
         font-size: 2.5em;
     }
-
-    #container {
-		min-width:0;
-	}
 	
 	.marseille1 {
 		margin: 20px;
