--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 *{
-    font-family: "Raleway", "Sans serif";
+    font-family: "Raleway";
     list-style-type: none;
     margin: 0;
     padding: 0;
