--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,6 +9,7 @@
 
 header{
     display: flex;
+	flex-wrap: wrap;
     margin-top: 25px;
 }
 
@@ -18,6 +19,7 @@ header figure{
 
 nav{
     display: flex;
+    max-width: 110px;
 }
 
 a{
@@ -27,6 +29,11 @@ a{
 ul{
     list-style: none;
     display: flex;
+}
+
+li{
+	width: 120px;
+    max-width: 300px;
 }
 
 .hebergements2, .inscription{
@@ -41,11 +48,13 @@ ul{
 
 footer{
     display: flex;
-    background: grey;
-    height: 200px;
+	flex-wrap: wrap;
+    background: #F2F2F2;
 }
 
 .fin, .fin1{
+	width: 200px;
+	max-width: 300px;
     margin: 20px;
 }
 
