--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,32 +12,34 @@
 header{
     display: flex;
 	flex-wrap: wrap;
-    margin-top: 25px;
 }
 
 header figure{
-	width: 350px;
-	margin-left: 10px;
-	max-width: 400px;
+	width: 830px;
+    margin-left: 10px;
+    max-width: 1280px;
+    padding-top: 15px;
 }
 
 nav{
     display: flex;
-	width: 500px;
+    justify-content: space-around;
+    align-items: center;
 }
 
 a{
     text-decoration: none;
-	order: 1;
+    margin-left: -10px;
 }
 
 ul{
     list-style: none;
     display: flex;
+    padding: 2rem;
 }
 
 li{
-	margin-right: 20px;
+	margin-right: 80px;
 }
 
 .hebergements2, .inscription{
@@ -45,7 +47,11 @@ li{
 }
 
 .activites{
-    color: black;
+    color: darkslategray;
+}
+
+ul :hover{
+    color: #0065FC;
 }
 
 /*FOOTER*/
@@ -57,11 +63,16 @@ footer{
 }
 
 .fin, .fin1{
-	width: 200px;
-	max-width: 300px;
+	width: 325px;
+	max-width: 400px;
     margin: 20px;
 }
 
+.fin p, .fin1 p{
+    margin-top: 10px;
+    color: darkslategray;
+}
+
 .fin h3, .fin1 h3{
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
