--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,15 +15,19 @@ header{
     margin-top: 25px;
 }
 
-header figure{
-	width: 350px;
-	margin-left: 10px;
-	max-width: 400px;
+.logo{
+	width: 110px;
 }
 
-nav{
+header figure{
+	width: 1035px;
+	margin-left: 10px;
+}
+
+header .nav{
     display: flex;
-	width: 500px;
+	justify-content: space-around;
+	align-items: center;
 }
 
 a{
@@ -31,21 +35,27 @@ a{
 	order: 1;
 }
 
-ul{
+header ul{
     list-style: none;
+	margin-top: -25px;
     display: flex;
 }
 
-li{
-	margin-right: 20px;
+header li{
+	padding-top: 30px;
+	margin-right: 30px;
 }
 
-.hebergements2, .inscription{
+.hebergements2{
     color: #0065FC;
 }
 
+li:hover{
+	border-top: solid #0065FC 2px;
+}
+
 .activites{
-    color: black;
+	color: black;
 }
 
 h1{
@@ -59,7 +69,8 @@ p{
 
 .filtres{
     width: 100%;
-    margin-top: 20px;
+	display:flex;
+    margin-top: 18px;
     margin-bottom: 10px;
     align-items: center;
 }
@@ -108,6 +119,8 @@ h2{
 	margin-left: 10px;
     background: #F2F2F2;
     border: transparent;
+	width: 375px;
+	height: 43px;
 }
 
 .btn .fa-search{
@@ -123,11 +136,14 @@ h2{
 
 .contour{
     border:transparent;
+	width: 260px;
 }
 
 ::placeholder{
     color: rgb(40, 40, 40);
     font-weight: bold;
+	font-size: 1.3em;
+	width: 200px;
 }
 
 .btn{
@@ -135,7 +151,7 @@ h2{
     text-align: center;
     color: white;
     border: transparent;
-    width:108px;
+    width: 95px;
 }
 
 .marge{
@@ -147,6 +163,7 @@ h2{
 }
 
 #fonction_filtres{
+	display: flex;
     list-style: none;
     flex-wrap: wrap;
     align-items: center;
