--- a/CSS/style.css
+++ b/CSS/style.css
@@ -480,6 +480,8 @@ footer p{
 	h1{
 		font-size: 22px;
 		max-width: 360px;
+		margin-top: 10px;
+		margin-bottom: 10px;
 	}
 	
 	header{
@@ -505,6 +507,10 @@ footer p{
 	
 	strong{
 		display: none;
+	}
+	
+	.filtres{
+		display: block;
 	}
 	
 	.arrondi{
@@ -539,7 +545,6 @@ footer p{
 	
 	.marge{
 		margin-left: 0;
-		width: 145px;
 	}
 	
 	#populaires{
@@ -576,6 +581,10 @@ footer p{
 		height: auto;
 		max-width: 370px;
 		margin-left: 10px;
+	}
+	
+	footer{
+		display: contents;
 	}
 }
 @media screen and (max-width: 991px) and (min-width: 768px)
