--- a/CSS/style.css
+++ b/CSS/style.css
@@ -577,10 +577,44 @@ footer p{
 	}
 	
 	#hebergements_marseille{
+		background: white;
 		width: 115%;
 		height: auto;
 		max-width: 370px;
 		margin-left: 10px;
+	}
+	
+	#activites article{
+		margin-left: 30px;
+	}
+	
+	#activites h2{
+		margin-left: 40px;
+	}
+	
+	.marseille1{
+		height: auto;
+		width: 115%;
+		max-width: 350px;
+	}
+	
+	.marseille1 img{
+		height: auto;
+		width: 300px;
+		max-width: 450px;
+	}
+	
+	#activites figcaption{
+		height: auto;
+	}
+	
+	.imagesmarseille1{
+		width: 100%;
+		max-width: 350px;
+	}
+	
+	.marseille1 figure img{
+		width: 100%;
 	}
 	
 	footer{
