--- a/CSS/style.css
+++ b/CSS/style.css
@@ -599,6 +599,7 @@ footer p{
 	.hebergements figure figcaption{
 		width: 100%;
 		max-width: 285px;
+        position: sticky;
 	}
 	
 	#hebergements_marseille{
